bin_PROGRAMS = Main
Main_SOURCES = main.c
Main_LDADD = libSingleLinkedList.a libDoublyLinkedList.a libCircularLinkedList.a

lib_LIBRARIES = libSingleLinkedList.a libDoublyLinkedList.a libCircularLinkedList.a
libSingleLinkedList_a_SOURCES = single_linked_list.c single_linked_list.h
libDoublyLinkedList_a_SOURCES = doubly_linked_list.c doubly_linked_list.h
libCircularLinkedList_a_SOURCES = circular_linked_list.c  circular_linked_list.h
