bin_PROGRAMS = Main
Main_SOURCES = main.c
Main_LDADD = libBubbleSort.a libInsertionSort.a libSelectionSort.a libMergeSort.a libQuickSort.a

lib_LIBRARIES = libBubbleSort.a libInsertionSort.a libSelectionSort.a libMergeSort.a libQuickSort.a
libBubbleSort_a_SOURCES = BubbleSort.c BubbleSort.h common.c common.h
libInsertionSort_a_SOURCES = InsertionSort.c InsertionSort.h
libSelectionSort_a_SOURCES = SelectionSort.c SelectionSort.h
libMergeSort_a_SOURCES = MergeSort.c MergeSort.h
libQuickSort_a_SOURCES = QuickSort.c QuickSort.h


